[package]
name = "id_token_verifier"
license = "MIT"
authors = ["Daniyil Yevtyushkin"]
description = "A tiny library for validating ID tokens using JWKS."
keywords = ["id-token", "auth", "third-party-auth"]
version = "0.2.5"
edition = "2021"
repository = "https://github.com/yevtyushkin/libs/tree/main/id_token_verifier"
rust-version = "1.75.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["sync"] }
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "google_id_token"
